--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Jo">
+  <meta name="author" content="Criartes - Personalizados">
   <meta name="description" content="Site criartes, produtos personalizados">
   <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="/styles.css">
@@ -44,7 +44,7 @@
             <img src="/img/whats.png" alt="Ícone WhatsApp" class="contato-icone-img">
             <section>
               <h3>WhatsApp</h3>
-              <a href="#" class="btn-primario">Chamar no Whats</a>
+              <a href="https://contate.me/5551981575692" target="_blank" class="btn-primario">Chamar no Whats</a>
             </section>
           </article>
 
@@ -53,7 +53,7 @@
             <img src="/img/email.png" alt="Ícone E-mail" class="contato-icone-img">
             <section>
               <h3>E-mail</h3>
-              <p>contato@criartes.com.br</p>
+              <p>personalizadoscriartes@hotmail.com</p>
             </section>
           </article>
 
@@ -62,7 +62,7 @@
             <img src="/img/relogio.png" alt="Ícone Relógio" class="contato-icone-img">
             <section>
               <h3>Horário de atendimento</h3>
-              <p>Segunda a sexta, das 9h às 18h.</p>
+              <p>Segunda a sexta,9h-12h  14h-18h.</p>
             </section>
           </article>
 
