--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Jo">
+   <meta name="author" content="Criartes - Personalizados">
   <meta name="description" content="Site criartes, produtos personalizados">
   <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="/styles.css">
@@ -26,7 +26,7 @@
   </header>
 
   <main>
-    <!-- HERO -->
+    
     <section class="hero">
       <section class="hero-texto">
         <h1>Criartes Presentes &amp; Personalizados</h1>
@@ -38,7 +38,7 @@
       </section>
     </section>
 
-    <!-- BENEFÍCIOS -->
+
     <section class="beneficios">
       <h2>Por que comprar na Criartes?</h2>
       <section class="beneficios-grid">
@@ -66,7 +66,7 @@
       </section>
     </section>
 
-    <!-- CATEGORIAS -->
+
     <section class="categorias">
       <h2>Categorias em destaque</h2>
       <section class="categorias-grid">
@@ -93,7 +93,7 @@
       </section>
     </section>
 
-    <!-- DESTAQUES DA LOJA (chamada pra loja) -->
+
     <section class="produtos">
       <h2>Alguns dos nossos destaques</h2>
 
