--- a/loja.html
+++ b/loja.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Jo">
+   <meta name="author" content="Criartes - Personalizados">
   <meta name="description" content="Site criartes, produtos personalizados">
   <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="/styles.css">
   <title>Loja - Criartes</title>
 </head>
 
-<body>
+<body class="pagina-loja">
   <header>
     <a href="./index.html">
       <img src="/img/logo.png" alt="Logo Criartes">
