--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="author" content="Criartes - Personalizados">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="author" content="Criartes - Personalizados">
   <meta name="description" content="Site criartes, produtos personalizados">
   <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="/styles.css">
@@ -26,7 +26,7 @@
   </header>
 
   <main>
-    
+
     <section class="hero">
       <section class="hero-texto">
         <h1>Criartes Presentes &amp; Personalizados</h1>
