--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <meta name="author" content="Criartes - Personalizados">
   <meta name="description" content="Site criartes, produtos personalizados">
   <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
